# NumericalProjectsCollections

./: CLEAN.md  README.md  cmake找不到xxx的解决办法.md  newread.md  不错的讲义.md  卡住的项目.md  完成的项目.md  容易构建的项目.md  构建失败但代码易懂的项目.md  构建成功正在学习.md  看到的项目.md  计划中的项目.md  计算机图形学可好玩了.md
ANewCollection/: readme.txt  seemSimple.txt
ANewCollection/ClassicMechanics/: joltphysics_interia.cpp  pendulmm.cpp
ANewCollection/ElectricityMagnetic/: del2fem_helmholtz.cpp  pppm_biosavart.cu
ANewCollection/Fluid/: cudaFluid.cpp
ANewCollection/Integration/: cubica_FULLSPACE_INTEGRATOR.cpp  cubica_ONLINE_SUBSPACE_INTEGRATOR.cpp  cubica_SUBSPACE_INTEGRATOR.cpp  cubica_SUBSPACE_MULTIBODY_INTEGRATOR.cpp  cubica_UNCONSTRAINED_FULLSPACE_INTEGRATOR.cpp  cubica_UNCONSTRAINED_SUBSPACE_INTEGRATOR.cpp  mani_ADMM.h  mani_IMPLICIT_EULER.h  mani_SYMPLECTIC_EULER.h  suanpan_LeeNewmark.cpp
Cloth/: notes.md
FiniteElement/: neoimplicit.py
LightShadow/plugins/: CMakeLists.txt  fresnel_approx.cpp  fresnel_curves.hpp  fresnel_helpers.hpp  fresnel_mapping.hpp  fresnel_reparam.cpp  layered.hpp  notes.md  readme.txt
Me/: ReadTetAndDrawProcedural.cs  boundaryGuide.py
Turbulence/: notes.md
定理/: 定理.md
定理/光照/: 云.md  (+35 more)
教程/: 16.md  16前-对流方法.md  17压力泊松迭代解法.md  18连续碰撞检测.md  19sharp形变.md  20水平集.md  21浸入边界法.md  22新neo.md  classicalMech.md  pbr.md  变分法.md  四元数.md  球谐光照.md
新教程/: neohookean.md  半隐式有限元.md  塑性.md  更真实的.md  更真实的弹性模拟.md  有限元eng.md  约束positionBased.md  隐式求解.md
论文笔记/: 8.2-8.8.md  MatchingFluid.md  TheArtOfHighPerformance.md  modernc++.md  parallelComputingFor.md  physicsBased.md  新建文本文档.txt  科学计算与企业级应用并行优化.md
(+1105 files in other folders)
